@@ -11,6 +11,7 @@ Version X.X (XXXX-XX-XX)
           removing has been moved up to AbstractAnnotationCollection to support this.
  Changed: Introduced MutableAnnotationCollection which enforces that added and removed annotations are
           also mutable (so that when doing add/remove, you can safely cast to the mutable sub-interface.)
+ Changed: Improved generics on APIs (MutableGroupAnnotation only contains MutableAnnotation, for instance.)
 
 Version 0.5 (2014-05-01)
 
